[tool.poetry]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = ["Lucas Queiroz <lucas.queiroz@ig.ufpa.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.7"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
